--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass":"sass --watch assets/scss:assets/css"
+    "sass": "sass --watch assets/scss:assets/css"
   },
   "keywords": [
     "social"
@@ -17,6 +17,7 @@
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
+    "ejs-lint": "^2.0.0",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
